# SRLTCP

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  run.bat  run.sh  setup.py  uninstall.bat  uninstall.sh  uninstall_paths.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml  build-apk.yml  checks.yml
.pytest-tmp/: test_settings_defaultscurrent  test_settings_persistcurrent  test_share_request_uses_requescurrent  test_trusted_add_removecurrent  test_trusted_blocked_not_trustcurrent  test_trusted_load_skips_invalicurrent  test_trusted_manual_add_with_hcurrent  test_trusted_rejects_invalid_hcurrent  test_trusted_update_rename_andcurrent  test_trusted_update_wan_fieldscurrent  test_unique_dest_path_adds_coucurrent  test_unique_dest_path_no_extencurrent  test_unique_dest_path_uses_oricurrent  test_wan_expose_port_persistcurrent  test_write_file_chunk_no_fsynccurrent  test_write_file_chunk_sparsecurrent  test_zip_path_to_temp_directorcurrent  test_zip_path_to_temp_rejects_current
.pytest-tmp/test_settings_persist0/: settings.json
.pytest-tmp/test_trusted_blocked_not_trust0/: trusted.json
.pytest-tmp/test_trusted_load_skips_invali0/: trusted.json
.pytest-tmp/test_trusted_manual_add_with_h0/: trusted.json
.pytest-tmp/test_trusted_update_rename_and0/: trusted.json
.pytest-tmp/test_trusted_update_wan_fields0/: trusted.json
.pytest-tmp/test_wan_expose_port_persist0/: settings.json
android/: .gitignore  README.md  build.gradle.kts  buildozer.spec  gradle.properties  main.py  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/p4a-recipes/python3/: __init__.py
android/p4a-recipes/python3/patches/: disable-grp.patch
android/service/: srltcp_service.py
android/src/main/: AndroidManifest.xml
scripts/: build-android.sh  check.sh  sync-android-python.sh
srltcp/: RELEASE_NOTES.md  __init__.py  __main__.py  app.py
srltcp/core/: __init__.py  discovery.py  identity.py  node.py  settings.py  trusted.py
srltcp/core/messaging/: __init__.py  announce.py  backend.py  connect.py  constants.py  hub.py  links.py  models.py  ping.py  presence.py  queue.py  relay.py  routing.py  share_peer.py  transfer.py
srltcp/core/protocol/: __init__.py  crypto.py  framing.py  messages.py  noise_handshake.py  signed.py
srltcp/routes/: __init__.py  api.py  share.py  ws.py
srltcp/transports/: __init__.py  base.py  serial.py  tcp.py
srltcp/utils/: __init__.py  files.py  folders.py  logging.py  network.py  platform.py  ports.py  serial_access.py  serial_ports.py  shutdown.py  system_stats.py  tls.py  wan.py
srltcp/web/: __init__.py  access_log.py  security.py  server.py
srltcp/web/static/: app.css  app.js  index.html
tests/: conftest.py  test_announce.py  test_connect_serial.py  test_crypto_hkdf.py  test_discovered_filter.py  test_discovery.py  test_files.py  test_folder_zip.py  test_folders.py  test_hub.py  test_links.py  test_network.py  test_noise_handshake.py  test_protocol.py  test_security.py  test_serial_access.py  test_serial_link_quality.py  test_serial_ports.py  test_settings.py  test_share_listing.py  test_share_peer.py  test_signed_announce.py  test_transfer_cancel.py  test_transfer_media.py  test_transfer_preview.py  test_transfer_stability.py  test_trusted.py  test_unique_dest.py  test_wan.py
(+9 files in other folders)
